java 代码移到 java 目录下面，gradle run 的编译要是能智能根据源码文件后缀识别出 Java、Kotlin 源文件自动编译就好了。这样混编起来更自由点。 后面看看 gradle 的插件机制。

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'application'
+
+mainClassName="com.easy.springboot.demo_springboot_with_mybatis.DemoSpringbootWithMybatisApplicationKt"
 
 group = 'com.easy.springboot'
 version = '0.0.1-SNAPSHOT'
